[workspace]
members = [".", "examples"]
resolver = "2"

[package]
name = "esp-hal-servo"
version = "0.2.0"
edition = "2024"
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
description = "A library for controlling servo motors using ESP32 LEDC peripheral"
license = "MIT OR Apache-2.0"
repository = "https://github.com/c-solo/esp-hal-servo"
readme = "README.md"
keywords = ["esp32", "servo", "ledc", "embedded", "esp-hal"]
categories = ["embedded", "hardware-support"]

[features]
default = ["esp32c3"]
esp32 = ["esp-hal/esp32", "esp-hal/unstable", "esp-hal/rt"]
esp32c2 = ["esp-hal/esp32c2", "esp-hal/unstable", "esp-hal/rt"]
esp32c3 = ["esp-hal/esp32c3", "esp-hal/unstable", "esp-hal/rt"]
esp32c6 = ["esp-hal/esp32c6", "esp-hal/unstable", "esp-hal/rt"]
esp32h2 = ["esp-hal/esp32h2", "esp-hal/unstable", "esp-hal/rt"]
esp32s2 = ["esp-hal/esp32s2", "esp-hal/unstable", "esp-hal/rt"]
esp32s3 = ["esp-hal/esp32s3", "esp-hal/unstable", "esp-hal/rt"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-hal = { version = "1", default-features = false }

[package.metadata.docs.rs]
default-target = "riscv32imc-unknown-none-elf"
features = ["esp32c3"]