[package]
name = "examples"
version = "0.4.0"
edition = "2021"
publish = false

[[bin]]
name = "simple_sweep"
path = "src/bin/simple_sweep.rs"

[[bin]]
name = "async_angle_sweep"
path = "src/bin/async_angle_sweep.rs"

[features]
default = ["esp32c3", "simple"]
# simple_sweep feature
simple = ["dep:riscv-rt"]
# async_angle_sweep feature
async = ["esp-hal-servo/async", "dep:embassy-executor", "dep:embassy-time", "dep:esp-rtos"]

esp32 = ["esp-hal-servo/esp32", "esp-hal/esp32", "esp-hal/unstable", "esp-hal/rt", "esp-bootloader-esp-idf/esp32", "esp-println/esp32", "esp-println/uart", "esp-println/log-04", "esp-backtrace/esp32"]
esp32c2 = ["esp-hal-servo/esp32c2", "esp-hal/esp32c2", "esp-hal/unstable", "esp-hal/rt", "esp-bootloader-esp-idf/esp32c2", "esp-println/esp32c2", "esp-println/uart", "esp-println/log-04", "esp-backtrace/esp32c2"]
esp32c3 = ["esp-hal-servo/esp32c3", "esp-hal/esp32c3", "esp-hal/unstable", "esp-hal/rt", "esp-bootloader-esp-idf/esp32c3", "esp-println/esp32c3", "esp-println/uart", "esp-println/log-04", "esp-backtrace/esp32c3"]
esp32c6 = ["esp-hal-servo/esp32c6", "esp-hal/esp32c6", "esp-hal/unstable", "esp-hal/rt", "esp-bootloader-esp-idf/esp32c6", "esp-println/esp32c6", "esp-println/uart", "esp-println/log-04", "esp-backtrace/esp32c6"]
esp32h2 = ["esp-hal-servo/esp32h2", "esp-hal/esp32h2", "esp-hal/unstable", "esp-hal/rt", "esp-bootloader-esp-idf/esp32h2", "esp-println/esp32h2", "esp-println/uart", "esp-println/log-04", "esp-backtrace/esp32h2"]
esp32s2 = ["esp-hal-servo/esp32s2", "esp-hal/esp32s2", "esp-hal/unstable", "esp-hal/rt", "esp-bootloader-esp-idf/esp32s2", "esp-println/esp32s2", "esp-println/uart", "esp-println/log-04", "esp-backtrace/esp32s2"]
esp32s3 = ["esp-hal-servo/esp32s3", "esp-hal/esp32s3", "esp-hal/unstable", "esp-hal/rt", "esp-bootloader-esp-idf/esp32s3", "esp-println/esp32s3", "esp-println/uart", "esp-println/log-04", "esp-backtrace/esp32s3"]

[dependencies]
esp-hal-servo = { path = "..", default-features = false }
esp-hal = { version = "=1.0.0-rc.0", default-features = false }
log = { version = "0.4", default-features = false }
esp-println = { version = "0.16", default-features = false }
esp-backtrace = { version = "0.18", default-features = false, features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = "0.4"

# Dependencies for simple_sweep (non-async examples)
riscv-rt = { version = "0.16", optional = true }

# Dependencies for async_angle_sweep (async examples)
embassy-executor = { version = "0.9", optional = true }
embassy-time = { version = "0.5", features = ["tick-hz-1_000_000"], optional = true }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "embassy"], optional = true }
